[package]
name = "cpwln"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
glob = "0.3.1"
relative-path = "1.9.3"
wild = "2.2.1"
